fix: move from id to slug in API
