# src/main/java/web/synergy/api/impl/AdminEventsDelegateImpl.java
@@ -1,6 +1,5 @@
 package web.synergy.api.impl;
 
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -10,7 +9,6 @@ import org.springframework.stereotype.Service;
 import web.synergy.api.AdminEventsApiDelegate;
 import web.synergy.domain.mapper.EventMapper;
 import web.synergy.domain.mapper.PageEventMapper;
-import web.synergy.domain.model.Event;
 import web.synergy.dto.EventDraft;
 import web.synergy.dto.EventPublication;
 import web.synergy.dto.EventResponse;
@@ -39,9 +37,8 @@ public class AdminEventsDelegateImpl implements AdminEventsApiDelegate {
     @Override
     public ResponseEntity<EventResponse> updateDraft(String slug, EventDraft eventDraft) {
         var username = getUsername();
-        var existingEvent = eventService.getBySlug(slug);
         var eventForUpdate = eventMapper.toEvent(eventDraft);
-        var savedEvent = eventService.update(existingEvent.getId(), eventForUpdate, username);
+        var savedEvent = eventService.update(slug, eventForUpdate, username);
         var eventResponse = eventMapper.toResponse(savedEvent);
 
         return new ResponseEntity<>(eventResponse, HttpStatus.OK);
@@ -49,10 +46,8 @@ public class AdminEventsDelegateImpl implements AdminEventsApiDelegate {
 
     @Override
     public ResponseEntity<EventResponse> createEvent(EventPublication eventPublication) {
-        eventService.isExists(eventPublication.getTitle());
-
         var username = getUsername();
-        var event = eventMapper.toEvent(eventPublication);
+        var event = eventMapper.toEvent(eventPublication);        
         var savedEvent = eventService.save(event, username);
         var eventResponse = eventMapper.toResponse(savedEvent);
 
@@ -60,26 +55,21 @@ public class AdminEventsDelegateImpl implements AdminEventsApiDelegate {
     }
 
     @Override
-    public ResponseEntity<EventResponse> updateEvent(String id, EventPublication eventPublication) {
-        eventService.isExists(eventPublication.getTitle());
-
+    public ResponseEntity<EventResponse> updateEvent(String slug, EventPublication eventPublication) {
         var username = getUsername();
         var event = eventMapper.toEvent(eventPublication);
-        var updatedEvent = eventService.update(id, event, username);
+        var updatedEvent = eventService.update(slug, event, username);
         var eventResponse = eventMapper.toResponse(updatedEvent);
 
         return new ResponseEntity<>(eventResponse, HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<Void> deleteEvent(String id) {
-        eventService.deleteEventById(id);
+    public ResponseEntity<Void> deleteEvent(String slug) {
+        eventService.deleteEventBySlug(slug);
         return new ResponseEntity<>(HttpStatus.NO_CONTENT);
     }
 
-    private static String getUsername() {
-        return SecurityContextHolder.getContext().getAuthentication().getName();
-    }
     @Override
     public ResponseEntity<PageEvent> getAll(Integer size, Integer page) {
         var pageable = PageRequest.of(page, size);
@@ -89,4 +79,7 @@ public class AdminEventsDelegateImpl implements AdminEventsApiDelegate {
         return new ResponseEntity<>(pageEvent, HttpStatus.OK);
     }
 
+    private static String getUsername() {
+        return SecurityContextHolder.getContext().getAuthentication().getName();
+    }
 }
